# eon

./: .gitignore  Cargo.toml  justfile  readme.md
eon_api/: Cargo.toml
eon_api/src/: response.rs
eon_api/src/response/: api_error.rs  bad_request.rs  created.rs
eon_data/: Cargo.toml
eon_data/src/: error.rs  lib.rs  paginator.rs
eon_types/: Cargo.toml
eon_types/src/: problem.rs
examples/: basic_server.rs
src/: auth.rs  command.rs  lib.rs  orm.rs  types.rs
src/api/: response.rs
src/api/response/: api_error.rs  bad_request.rs  conflict.rs  forbidden.rs  internal_server.rs  not_found.rs  unauthorized.rs  unprocessable_entity.rs
src/auth/: backend.rs  mod.rs  types.rs
src/auth/backend/: authenticate.rs  decoder.rs  encoder.rs
src/auth/contract/: claims_maker.rs  mod.rs  user_details.rs  user_details_finder.rs
src/auth/facades/: auth.rs
src/auth/middleware/: jwt_auth.rs  mod.rs
src/auth/types/: authentication_token.rs
src/chrono_ext/date/: contracts.rs  impls.rs  mod.rs
src/command/: executable.rs  handler.rs  mod.rs
src/contract/: mod.rs  persistence_client.rs
src/http/: mod.rs
src/http/response/: api_error.rs  bad_request.rs  conflict.rs  created.rs  forbidden.rs  internal_server.rs  mod.rs  not_found.rs  unauthorized.rs  unprocessable_entity.rs
src/http/runtime/: server.rs
src/http/types/: field.rs  mod.rs  problem_details.rs  resource_id.rs
src/orm/: client.rs  client_ext.rs  connector.rs  mod.rs  paginator.rs
src/pagination/: mod.rs
src/pagination/paginator/: mod.rs  paginate.rs
src/pagination/paginator/contract/: into_paged.rs  mod.rs  paginate.rs
src/pagination/types/: mod.rs  paged.rs  pagination.rs
src/types/: pagination.rs
src/utils/: mod.rs
src/utils/capitalizer/: mod.rs
