[package]
name = "eon"
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["edinsonjim"]
repository = "https://github.com/iDesoftSystems/eon"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.7" }
thiserror = { version = "2.0.17" }
validator = { version = "0.20", features = ["derive"] }
tracing = { version = "0.1" }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], optional = true }
jsonwebtoken = { version = "9.3.1", optional = true }
bcrypt = { version = "0.17.1", optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.42", optional = true }

[features]
jwt-auth = ["dep:jsonwebtoken", "dep:bcrypt", "dep:base64"]
orm = ["dep:sea-orm"]
orm-mysql = ["orm", "sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls"]
orm-sqlite = ["orm", "sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls"]
chrono_ext = ["dep:chrono"]
