[package]
name = "eon"
version = "0.5.1"
edition = "2024"
license = "MIT"
authors = ["edinsonjim"]
repository = "https://github.com/iDesoftSystems/eon"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
axum = { version = "0.8.8" }
thiserror = { version = "2.0.17" }
validator = { version = "0.20", features = ["derive"] }
tracing = { version = "0.1.44" }
sea-orm = { version = "1.1.19", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
], optional = true }
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
jsonwebtoken = { version = "10.2.0", features = [
    "rust_crypto",
], optional = true }
bcrypt = { version = "0.18.0", optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.42", optional = true }

[features]
jwt-auth = ["dep:jsonwebtoken", "dep:bcrypt", "dep:base64"]
orm = ["dep:sea-orm"]
orm-mysql = ["orm", "sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls"]
orm-sqlite = ["orm", "sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls"]
chrono-ext = ["dep:chrono"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
