[package]
name = "eon_api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eon_types = { workspace = true }

serde = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
