[package]
name = "eon_data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
mysql = ["sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls"]

[dependencies]
eon_types = { workspace = true }
thiserror = { workspace = true }
sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls"
] }
